istio/lab6-timeout/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-master-file
spec:
  hosts:
    - caj-master-file
  http:
  - fault:
      delay:
        fixedDelay: 1s
        percentage:
          value: 100
    route:
    - destination:
        host: caj-master-file
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-fare
spec:
  hosts:
  - caj-fare
  http:
  - route:
    - destination:
        host: caj-fare
        subset: v1
    timeout: 0.5s
